@@ -1,4 +1,5 @@
 4.0
+	+ Better control of error in local backup confirmation dialog
 	+ Fixed i18n bug in progress dialog
 	+ Updated remoteservices dependencies
 	+ Rename Import/Export Configuration to Configuration Backup
